fixed lots of easy warning. Most important problem now: see about Observable/Observer